Integrated home screen, main categories, subcategories, and product details with api

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -14,8 +14,8 @@
     "please_enter_address_type":"من فضلك ادخال نوع العنوان",
     "please_enter_delivery_instructions":"من فضلك ادخال تعليمات التوصيل",
     "enter erea":"ادخل المنطقه",
-    
-    
+
+  "unavailable": "غير متوفر",
 
     "cairo_branch": "فرع القاهرة",
     "mansoura_Branch": "فرع المنصورة",
