--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -7,7 +7,7 @@
   "please_enter_your_password":"Enter Your Password",
   "please_confirm_your_password":"Confirm Your Password",
   "enter erea":"Enter erea",
-  
+  "unavailable": "غير متوفر",
   "please_enter_your_city":"Enter Your City",
   "please_enter_your_street":"Enter Your Street",
   "please_enter_building_name_or_number":"Enter Building Name or Number",
