Integrated most of the app with the API

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -151,7 +151,7 @@
    "delivery_to:home":"التوصيل إلي:المنزل",
    "azzhar_street 2,hawalli,nasr city":"ا شارع الازهر 2 ,حولي , مدينة نصر",
    "price:":"السعر",
-   "20 pounds":"20 جنيه",
+   "pounds":" جنيه",
    "total:":"الإجمالي",
    "the_minimum_order":"الحد الأدني للطلب",
    "2000 pounds":"2000 جنيه",
