--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -156,7 +156,7 @@
   "delivery_to:home": "Delivery To: Home",
   "azzhar_street 2,hawalli,nasr city": "2 Azzhar St, Hawalli, Nasr City",
   "price:": "Price:",
-  "20 pounds": "20 EGP",
+  "pounds": " EGP",
   "total:": "Total:",
   "the_minimum_order": "Minimum Order",
   "2000 pounds": "2000 EGP",
